--- a/blog/2023-03-28-welcome.md
+++ b/blog/2023-03-28-welcome.md
@@ -17,7 +17,7 @@ After reading through that google form I now understand all of the issues i've b
 
 ## Going Forward
 
-From now on you will all now the current track of development, exactly whats going on. Im going to keep images more to the teaser channel in the discord but im going to keep everything else here.
+From now on you will all know the current track of development, exactly whats going on. Im going to keep images more to the teaser channel in the discord but im going to keep everything else here.
 
 There will be a post once or twice a week with updates on current progress in stuff, ill also be creating an FAQ section on here, and ill make a post once its completed. I wanted to make sure I got this out to you all first!
 
