I really cant spell

--- a/blog/2023-03-28-welcome.md
+++ b/blog/2023-03-28-welcome.md
@@ -35,7 +35,7 @@ Life happens, a developer may get sick and be unable to work for a few days, rob
 
 I'd love to give you an estimate but im going to wait until im sure of it. The past runners of this project have given multiple empty promises of release, even I did it once with the executives.
 
-Once im sure beyond a reasonable doubt that my estimate is legit, im keeping quiet about a release.
+Until im sure beyond a reasonable doubt that my estimate is legit, im keeping quiet about a release.
 
 But, im still going to take you all on the ride with us from now on, almost *every step of the way.*
 
@@ -71,7 +71,7 @@ Once I have a teaser for it i'll post a short sneak peak video :)
 
 ## Till the next time
 
-That's all for now, as I said the "FAQ" will come out soon as well as the "Currently Working On" page, just want to figure out some of the kinks, until Thursday (or Saturday, time will tell)
+That's all for now, as I said the "FAQ" will come out soon as well as the "Currently Working On" page, just want to figure out some of the kinks. Until Thursday (or Saturday, time will tell)
 
 Have a good evening :)
 
