--- a/blog/2023-04-17-april.mdx
+++ b/blog/2023-04-17-april.mdx
@@ -5,10 +5,12 @@ authors: aaron
 tags: [development update]
 ---
 
-<title>April Blog Post</title>
-<meta content="April Blog Post" property="og:title" />
-<meta content="https://media.discordapp.net/attachments/994064234373726209/1097584516354285609/d5028d32a16c655e2be4e77c9e00f65c.png" property="og:image" />
-<meta content="#108FC9" data-react-helmet="true" name="theme-color" />
+<head>
+    <title>April Blog Post</title>
+    <meta content="April Blog Post" property="og:title" />
+    <meta content="https://media.discordapp.net/attachments/994064234373726209/1097584516354285609/d5028d32a16c655e2be4e77c9e00f65c.png" property="og:image" />
+    <meta content="#108FC9" data-react-helmet="true" name="theme-color" />
+</head>
 
 # April
 
