--- a/blog/2023-04-17-april.mdx
+++ b/blog/2023-04-17-april.mdx
@@ -19,14 +19,14 @@ What a crazy month its been aye? Today I had a huge meeting with the team and we
 I wanted the barrels to be physics based, for those who tuned into my last stream you wouldve seen me trying to figure this out, of course, its a much harder task than youd expect but I found a pretty cool way to do it with some constraints and other parts to stop the barrel from going off course, as you can see in the video below
 
 <video width="800" height="400" controls>
-  <source src=".././img/232625222-712f1cdb-53b0-48b1-9554-0b943114b9f6.mp4" type="video/mp4"></source>
+  <source src=".././img/2023-04-17 19-44-04.mp4" type="video/mp4"></source>
   Your browser does not support the video tag.
 </video>
 
 I also wanted the rope that picks up the barrels to be as dynamic and nice looking as possible, this isnt your regular old rope constraint, the code changes the length dynamically to give it that swinging look
 
 <video width="800" height="400" controls>
-  <source src=".././img/232626496-3819cefb-296e-4a43-802f-e90a6e932e1e.mp4" type="video/mp4"></source>
+  <source src=".././img/2023-04-17 19-45-03.mp4" type="video/mp4"></source>
   Your browser does not support the video tag.
 </video>
 
